set up http service

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -7,7 +7,8 @@
     <script src="vendors/jquery-3.2.1.min.js"> charset="utf-8"</script>
     <script src="vendors/angular.min.js"> charset="utf-8"</script>
     <script src="vendors/angular-route.min.js" charset="utf-8"></script>
-    <script src="scripts/script.js" charset="utf-8"></script>
+    <script src="/scripts/services/http.service.js" charset="utf-8"></script>
+    <script src="scripts/app.js" charset="utf-8"></script>
     <script src="vendors/materialize.min.js" charset="utf-8"></script>
     <script src="vendors/angular-materialize.min.js" charset="utf-8"></script>
     <title></title>
