--- a/public/view/index.html
+++ b/public/view/index.html
@@ -2,16 +2,20 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="vendors/materialize.min.css">
     <link rel="stylesheet" href="styles/style.css">
+    <!-- Vendors -->
     <script src="vendors/jquery-3.2.1.min.js"> charset="utf-8"</script>
     <script src="vendors/angular.min.js"> charset="utf-8"</script>
     <script src="vendors/angular-route.min.js" charset="utf-8"></script>
-    <script src="/scripts/services/http.service.js" charset="utf-8"></script>
-    <script src="scripts/app.js" charset="utf-8"></script>
     <script src="vendors/materialize.min.js" charset="utf-8"></script>
     <script src="vendors/angular-materialize.min.js" charset="utf-8"></script>
-    <title></title>
+    <!-- Ng-App -->
+    <script src="/scripts/app.js" charset="utf-8"></script>
+    <script src="/scripts/services/http.service.js" charset="utf-8"></script>
+    <!-- Controllers -->
+    <title>Abamath</title>
   </head>
 
   <body ng-app="myApp">
