added controller folder

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- Stylesheets -->
     <link rel="stylesheet" href="vendors/materialize.min.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/styles.scss">
     <!-- Vendors -->
     <script src="vendors/jquery-3.2.1.min.js"> charset="utf-8"</script>
     <script src="vendors/angular.min.js"> charset="utf-8"</script>
@@ -15,6 +15,7 @@
     <script src="/scripts/app.js" charset="utf-8"></script>
     <script src="/scripts/services/http.service.js" charset="utf-8"></script>
     <!-- Controllers -->
+    <script src="/scripts/controllers/parentController.js" charset="utf-8"></script>
     <title>Abamath</title>
   </head>
 
