--- a/public/view/index.html
+++ b/public/view/index.html
@@ -1,28 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="vendors/materialize.min.css">
-    <link rel="stylesheet" href="styles/styles.scss">
-    <!-- Vendors -->
-    <script src="vendors/jquery-3.2.1.min.js"> charset="utf-8"</script>
-    <script src="vendors/angular.min.js"> charset="utf-8"</script>
-    <script src="vendors/angular-route.min.js" charset="utf-8"></script>
-    <script src="vendors/materialize.min.js" charset="utf-8"></script>
-    <script src="vendors/angular-materialize.min.js" charset="utf-8"></script>
-    <!-- Ng-App -->
-    <script src="/scripts/app.js" charset="utf-8"></script>
-    <script src="/scripts/services/http.service.js" charset="utf-8"></script>
-    <!-- Controllers -->
-    <script src="/scripts/controllers/parentController.js" charset="utf-8"></script>
-    <title>Abamath</title>
-  </head>
 
-  <body ng-app="myApp">
-    <main ng-controller="mainController as mc">
+<head>
+  <meta charset="utf-8">
+  <!-- Stylesheets -->
+  <link rel="stylesheet" href="vendors/materialize.min.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="styles/styles.scss">
+  <!-- Vendors -->
+  <script src="vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
+  <script src="vendors/angular.min.js" charset="utf-8"></script>
+  <script src="vendors/angular-route.min.js" charset="utf-8"></script>
+  <script src="vendors/materialize.min.js" charset="utf-8"></script>
+  <script src="vendors/angular-materialize.min.js" charset="utf-8"></script>
+  <!-- Ng-App -->
+  <script src="/scripts/app.js" charset="utf-8"></script>
+  <script src="/scripts/services/http.service.js" charset="utf-8"></script>
+  <!-- Controllers -->
+  <script src="/scripts/controllers/indexController.js" charset="utf-8"></script>
+  <script src="/scripts/controllers/parentController.js" charset="utf-8"></script>
+  <title>Abamath</title>
+</head>
 
-      <ng-view></ng-view>
-    </main>
-  </body>
+<body ng-app="myApp">
+  <main ng-controller="IndexController as ic">
+
+    <!-- start sideNav -->
+    <ul id="slide-out" class="side-nav">
+      <li>
+        <div class="user-view">
+          <div class="background">
+            <!-- <img src="images/office.jpg"> -->
+          </div>
+          <!-- <a href="#!user"><img class="circle" src="images/yuna.jpg"></a> -->
+          <a href="#!name"><span class="white-text name">John Doe</span></a>
+          <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
+        </div>
+      </li>
+      <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
+      <li><a href="#!">Second Link</a></li>
+      <li>
+        <div class="divider"></div>
+      </li>
+      <li><a class="subheader">Subheader</a></li>
+      <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
+    <!-- end sideNav -->
+
+    <ng-view></ng-view>
+  </main>
+</body>
+
 </html>
