added partials and shit

--- a/public/view/partials/parent.html
+++ b/public/view/partials/parent.html
@@ -1,5 +1,6 @@
 <div class="">
+  <h1>Parent View</h1>
   <ul>
-    <li ng-repeat='student in pc.studentArray' ng-click='pc.checkStudent($index)'>{{student}}</li>
+    <li ng-repeat='student in pc.studentArray' ng-click='pc.checkStudent($index)'>{{student.firstName}}</li>
   </ul>
 </div>
