added google oauth

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -13,6 +13,7 @@
   <script src="vendors/angular-route.min.js" charset="utf-8"></script>
   <script src="vendors/materialize.min.js" charset="utf-8"></script>
   <script src="vendors/angular-materialize.min.js" charset="utf-8"></script>
+  <script src="vendors/hello.all.min.js"></script>
   <!-- Ng-App -->
   <script src="/scripts/app.js" charset="utf-8"></script>
   <script src="/scripts/services/http.service.js" charset="utf-8"></script>
@@ -25,27 +26,30 @@
 <body ng-app="myApp">
   <main ng-controller="IndexController as ic">
 
+    <a href="#" class="button-collapse" data-activates="nav" data-sidenav="left" data-closeonclick="true">
+    <p><i class="large material-icons">menu</i></p></a>
+
     <!-- start sideNav -->
-    <ul id="slide-out" class="side-nav">
-      <li>
-        <div class="user-view">
-          <div class="background">
-            <!-- <img src="images/office.jpg"> -->
-          </div>
-          <!-- <a href="#!user"><img class="circle" src="images/yuna.jpg"></a> -->
-          <a href="#!name"><span class="white-text name">John Doe</span></a>
-          <a href="#!email"><span class="white-text email">jdandturk@gmail.com</span></a>
-        </div>
-      </li>
-      <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-      <li><a href="#!">Second Link</a></li>
-      <li>
-        <div class="divider"></div>
-      </li>
-      <li><a class="subheader">Subheader</a></li>
-      <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    <ul id="nav" class="side-nav">
+        <li class="bold"><a href="/" class="waves-effect waves"><span class="menuItem">Classes Dashboard</span></a></li>
+
+        <li class="no-padding white">
+            <ul class="collapsible collapsible-accordion white">
+                <li class="bold"><a class="collapsible-header waves-effect waves active"><span class="menuItem">Class Options</span></a>
+                    <div class="collapsible-body">
+                        <ul class="">
+                            <li class=""><a href="#!"><span class="menuItem">Logistics</span></a></li>
+                            <li class=""><a href="#!"><span class="menuItem">Roster</span></a></li>
+                            <li class="n"><a href="#!"><span class="menuItem">Emergency Contact</span></a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+        </li>
+
+        <li class="bold"><a href="#!" ng-click="ic.logout()" class="waves-effect waves-grey"><span class="menuItem">Logout</span></a></li>
+        <li><img class="brand-logo" src="images/abamath.png" alt=""></li>
     </ul>
-    <a href="#" data-activates="slide-out" class="button-collapse"><i class="material-icons">menu</i></a>
     <!-- end sideNav -->
 
     <ng-view></ng-view>
