--- a/public/view/partials/home.html
+++ b/public/view/partials/home.html
@@ -1,2 +1,3 @@
-<div>on home.html</div>
-<button ng-click="ic.login()">Click to "log in"</button>
+<div ng-init="ic.init()" class="row">
+  <button class="btn col s4 offset-s4" ng-click="ic.login()">Google Login</button>
+</div>
