added logic for questions

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -14,6 +14,7 @@
     <!-- Ng-App -->
     <script src="/scripts/app.js" charset="utf-8"></script>
     <script src="/scripts/services/http.service.js" charset="utf-8"></script>
+    <script src="/scripts/services/parentService.js" charset="utf-8"></script>
     <!-- Controllers -->
     <script src="/scripts/controllers/parentController.js" charset="utf-8"></script>
     <title>Abamath</title>
