--- a/public/view/index.html
+++ b/public/view/index.html
@@ -1,58 +1,66 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="vendors/materialize.min.css">
+  <link rel="stylesheet" href="/public/vendors/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="styles/styles.scss">
+  <link rel="stylesheet" href="/public/styles/styles.scss">
   <!-- Vendors -->
-  <script src="vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
-  <script src="vendors/angular.min.js" charset="utf-8"></script>
-  <script src="vendors/angular-route.min.js" charset="utf-8"></script>
-  <script src="vendors/materialize.min.js" charset="utf-8"></script>
-  <script src="vendors/angular-materialize.min.js" charset="utf-8"></script>
-  <script src="vendors/hello.all.min.js"></script>
+  <script src="/public/vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
+  <script src="/public/vendors/angular.min.js" charset="utf-8"></script>
+  <script src="/public/vendors/angular-route.min.js" charset="utf-8"></script>
+  <script src="/public/vendors/angular-cookies.min.js"></script>
+  <script src="/public/vendors/materialize.min.js" charset="utf-8"></script>
+  <script src="/public/vendors/angular-materialize.min.js" charset="utf-8"></script>
+
   <!-- Ng-App -->
-  <script src="/scripts/app.js" charset="utf-8"></script>
-  <script src="/scripts/services/http.service.js" charset="utf-8"></script>
-  <script src="/scripts/services/parentService.js" charset="utf-8"></script>
+  <script src="/public/scripts/app.js" charset="utf-8"></script>
+  <script src="/public/scripts/services/http.service.js" charset="utf-8"></script>
+  <script src="/public/scripts/services/parentService.js" charset="utf-8"></script>
+  <script src="/public/scripts/services/authFactory.js" charset="utf-8"></script>
   <!-- Controllers -->
-  <script src="/scripts/controllers/indexController.js" charset="utf-8"></script>
-  <script src="/scripts/controllers/parentController.js" charset="utf-8"></script>
+  <script src="/public/scripts/controllers/indexController.js" charset="utf-8"></script>
+  <script src="/public/scripts/controllers/authController.js" charset="utf-8"></script>
+  <script src="/public/scripts/controllers/parentController.js" charset="utf-8"></script>
   <title>Abamath</title>
 </head>
 
 <body ng-app="myApp">
   <main ng-controller="IndexController as ic">
 
-    <a href="#" class="button-collapse" data-activates="nav" data-sidenav="left" data-closeonclick="true">
-    <p><i class="large material-icons">menu</i></p></a>
+    <div ng-if="ic.displayLogout">
+      <a href="#" class="button-collapse" data-activates="nav" data-sidenav="left" data-closeonclick="true">
+        <p><i class="large material-icons">menu</i></p>
+      </a>
 
-    <!-- start sideNav -->
-    <ul id="nav" class="side-nav">
+      <!-- start sideNav -->
+      <ul id="nav" class="side-nav">
         <li class="bold"><a href="/" class="waves-effect waves"><span class="menuItem">Classes Dashboard</span></a></li>
 
         <li class="no-padding white">
-            <ul class="collapsible collapsible-accordion white">
-                <li class="bold"><a class="collapsible-header waves-effect waves active"><span class="menuItem">Class Options</span></a>
-                    <div class="collapsible-body">
-                        <ul class="">
-                            <li class=""><a href="#!"><span class="menuItem">Logistics</span></a></li>
-                            <li class=""><a href="#!"><span class="menuItem">Roster</span></a></li>
-                            <li class="n"><a href="#!"><span class="menuItem">Emergency Contact</span></a></li>
-                        </ul>
-                    </div>
-                </li>
-            </ul>
+          <ul class="collapsible collapsible-accordion white">
+            <li class="bold"><a class="collapsible-header waves-effect waves active"><span class="menuItem">Class Options</span></a>
+              <div class="collapsible-body">
+                <ul class="">
+                  <li class=""><a href="#!"><span class="menuItem">Logistics</span></a></li>
+                  <li class=""><a href="#!"><span class="menuItem">Roster</span></a></li>
+                  <li class="n"><a href="#!"><span class="menuItem">Emergency Contact</span></a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
         </li>
 
         <li class="bold"><a href="#!" ng-click="ic.logout()" class="waves-effect waves-grey"><span class="menuItem">Logout</span></a></li>
-        <li><img class="brand-logo" src="images/abamath.png" alt=""></li>
-    </ul>
+        <li><img class="brand-logo" src="/public/assets/images/abamath.png" alt=""></li>
+      </ul>
+    </div>
     <!-- end sideNav -->
 
     <ng-view></ng-view>
+
   </main>
 </body>
 
