--- a/public/view/index.html
+++ b/public/view/index.html
@@ -27,7 +27,7 @@
   <title>Abamath</title>
 </head>
 
-<body ng-app="myApp">
+<body ng-app="myApp" ng-cloak>
   <main ng-controller="IndexController as ic">
 
     <div ng-if="ic.displayLogout">
