fixed navbar issue

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -6,11 +6,7 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/public/vendors/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<<<<<<< HEAD
-  <link rel="stylesheet" href="styles/styles.min.css">
-=======
-  <link rel="stylesheet" href="/public/styles/styles.scss">
->>>>>>> userwork
+  <link rel="stylesheet" href="/public/styles/styles.min.css">
   <!-- Vendors -->
   <script src="/public/vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
   <script src="/public/vendors/angular.min.js" charset="utf-8"></script>
@@ -40,7 +36,7 @@
         <a href="#" class="navButton button-collapse left" data-activates="nav" data-sidenav="left" data-closeonclick="true">
           <i class="large material-icons">menu</i>
         </a>
-        <img ng-src="../images/abamath.png" class="brand-logo right navLogo" />
+        <img ng-src="public/assets/images/abamath.png" class="brand-logo right navLogo" />
       </div>
     </nav>
     <!-- end topNav -->
