--- a/public/view/parentQuestions/emergencyContact.html
+++ b/public/view/parentQuestions/emergencyContact.html
@@ -1,6 +1,9 @@
 <div class="">
   <h1>emergency contact</h1>
-  <span>Would you like to review your data?</span>
+  <span>Is this information correct?</span>
+  <p>{{pc.display.emergency}}</p>
   <button ng-click='pc.emergencyReview()' type="button" name="button">Yes</button>
   <button ng-click='pc.goNext("/selfCheckOut")' type="button" name="button">No</button>
+
+
 </div>
