added controller for classes

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -24,6 +24,7 @@
   <script src="/public/scripts/controllers/indexController.js" charset="utf-8"></script>
   <script src="/public/scripts/controllers/authController.js" charset="utf-8"></script>
   <script src="/public/scripts/controllers/parentController.js" charset="utf-8"></script>
+  <script src="/public/scripts/controllers/classesController.js" charset="utf-8"></script>
   <title>Abamath</title>
 </head>
 
