added controller for classes

--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -1,3 +1,5 @@
 <div ng-controller='ClassesController' class="">
   <h4>yo its the classes</h4>
+  <button ng-if='cc.admin' class='btn' type="button" name="button">noah</button>
+  <input ng-if='cc.admin' type="text" name="" value=""placeholder="noah">
 </div>
