--- a/public/view/index.html
+++ b/public/view/index.html
@@ -17,6 +17,7 @@
 
   <!-- Ng-App -->
   <script src="/public/scripts/app.js" charset="utf-8"></script>
+  <script src="/public/scripts/defineClasses.js" charset="utf-8"></script>
   <script src="/public/scripts/services/http.service.js" charset="utf-8"></script>
   <script src="/public/scripts/services/parentService.js" charset="utf-8"></script>
   <script src="/public/scripts/services/authFactory.js" charset="utf-8"></script>
@@ -25,6 +26,7 @@
   <script src="/public/scripts/controllers/authController.js" charset="utf-8"></script>
   <script src="/public/scripts/controllers/parentController.js" charset="utf-8"></script>
   <script src="/public/scripts/controllers/classesController.js" charset="utf-8"></script>
+  <script src="/public/scripts/controllers/studentsController.js" charset="utf-8"></script>
   <title>Abamath</title>
 </head>
 
