initial revisions to parent view and some more

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -66,6 +66,11 @@
 
     <ng-view></ng-view>
 
+
+
+    <!-- ben test section (remove if merging) -->
+    <button ng-click="ic.go('/parent')">Ben's Test Button - Go To Parent.html</button>
+
   </main>
 </body>
 
