--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -1,6 +1,8 @@
 <div class="">
   <h1>Parent View</h1>
   <ul>
-    <li ng-repeat='student in pc.studentArray' ng-click='pc.checkStudent($index)'>{{student.firstName}}</li>
+    <li ng-repeat='student in pc.studentArray' ng-click='pc.checkInStudent($index)'>
+      Check in:  {{student.firstName}} {{student.lastName}}
+    </li>
   </ul>
 </div>
