added working auth route for adding a user via admin

--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -5,3 +5,16 @@
 .navLogo {
   height: inherit;
 }
+
+.collapsible-header {
+  padding: 0 32px !important;
+}
+
+.collapsible-item{
+  padding: 0 40px !important;
+}
+
+.sideNav-logo {
+  height: auto;
+  width: 100%;
+}
