--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -1,7 +1,9 @@
 <div ng-init='' class="">
-  <h4>yo its the classes</h4>
-  <button ng-if='cc.admin' class='btn' type="button" name="button">noah</button>
-  <input ng-if='cc.admin' type="text" name="" value=""placeholder="noah">
-
-  
+  <h4>Welcome {{cc.name}}! This is the list of current classes!</h4>
+  <div class="row">
+    <div class="input-field col s6">
+      <input ng-if='cc.admin' ng-model=cc.email type="text" name="" value=""placeholder="noah">
+    </div>
+    <button ng-if='cc.admin' ng-click="cc.addUser()" class='btn' type="button" name="button">add admin</button>
+  </div>
 </div>
