--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -18,3 +18,31 @@
   height: auto;
   width: 100%;
 }
+
+/*table styles*/
+
+table {
+  color: #333;
+  width: 800px;
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: auto;
+}
+
+td, th {
+  border: 1px solid transparent;
+  height: 30px;
+  transition: all 0.3s;
+}
+
+th {
+  background: #59C3C3;
+  color: white;
+  text-align: center;
+  font-weight: bold;
+}
+
+td {
+  background: #FAFAFA;
+  text-align: center;
+}
