--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -2,8 +2,36 @@
   <h4>Welcome {{cc.name}}! This is the list of current classes!</h4>
   <div class="row">
     <div class="input-field col s6">
-      <input ng-if='cc.admin' ng-model=cc.email type="text" name="" value=""placeholder="noah">
+      <input ng-if='cc.admin' ng-model=cc.email type="text" name="" value="" placeholder="noah">
     </div>
     <button ng-if='cc.admin' ng-click="cc.addUser()" class='btn' type="button" name="button">add admin</button>
+  </div>
+  <div class="row">
+    <div class="col s12">
+      <table>
+        <tr>
+          <th>Instructors</th>
+          <th>Name</th>
+          <th>District</th>
+          <th>Days</th>
+          <th>Start Date</th>
+          <th>End Date</th>
+          <th>Time</th>
+          <th>Grades</th>
+          <th></th>
+        </tr>
+        <tr ng-repeat='x in cc.classesArray '>
+          <td>Instructors</td>
+          <td>{{ x.subject }}</td>
+          <td>{{ x.location }}</td>
+          <td>Days</td>
+          <td>{{ x.startDate }}</td>
+          <td>{{ x.endDate }}</td>
+          <td>Time</td>
+          <td>{{ x.grades }}</td>
+          <td><button class="delete" ng-click='cc.removeClass(x._id)'>Delete</button></td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
