--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -1,9 +1,31 @@
-<div class="">
-  <form class="" action="index.html" method="post">
-    <input ng-model='sc.parentID' type="text" name="" value="">
-    <input ng-model='sc.firstName' type="text" name="" value="">
-    <input ng-model='sc.lastName' type="text" name="" value="">
-    <input ng-model='sc.grade' type="text" name="" value="">
-    <button ng-click='sc.populateStudents()' type="button" name="button"></button>
-  </form>
+<div class="container">
+  <div class="row">
+    <div class="col s12">
+      <form class="" action="index.html" method="post">
+        <input ng-model='sc.parentID' type="text" name="" value="">
+        <input ng-model='sc.firstName' type="text" name="" value="">
+        <input ng-model='sc.lastName' type="text" name="" value="">
+        <input ng-model='sc.grade' type="text" name="" value="">
+        <button ng-click='sc.populateStudents()' type="button" name="button"></button>
+      </form>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col s12">
+      <table>
+        <tr>
+          <th>Name</th>
+          <th>Grade</th>
+          <th>Emergency Contact</th>
+          <th></th>
+        </tr>
+        <tr ng-repeat='x in sc.studentsArray '>
+          <td>{{ x.firstName }}</td>
+          <td>{{ x.grade }}</td>
+          <td><button>View Emergency Contact</button></td>
+          <td><button>Delete</button></td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
