--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -23,7 +23,7 @@
 
 table {
   color: #333;
-  width: 800px;
+  width: 90%;
   border-collapse: collapse;
   border-spacing: 0;
   margin: auto;
@@ -36,8 +36,8 @@ td, th {
 }
 
 th {
-  background: #59C3C3;
-  color: white;
+  // background: #59C3C3;
+  color: black;
   text-align: center;
   font-weight: bold;
 }
