--- a/public/styles/styles.scss
+++ b/public/styles/styles.scss
@@ -46,3 +46,38 @@ td {
   background: #FAFAFA;
   text-align: center;
 }
+
+// modal
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 60%;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 36px;
+    font-weight: bold;
+}
+.close:hover,
+.close:focus {
+    color: #F45B69;
+    text-decoration: none;
+    cursor: pointer;
+}
