--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -1,6 +1,9 @@
-<div ng-init='' class="">
+<div class="container">
   <h4>Welcome {{cc.name}}! This is the list of current classes!</h4>
   <div class="row">
+    <div class="col s6">
+      <button onclick="document.getElementById('addClass').style.display = 'block'">Add Class</button>
+    </div>
     <div class="input-field col s6">
       <input ng-if='cc.admin' ng-model=cc.email type="text" name="" value="" placeholder="noah">
     </div>
@@ -34,4 +37,11 @@
       </table>
     </div>
   </div>
+  <!-- The Modal -->
+  <div id="addClass" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="document.getElementById('addClass').style.display = 'none'">&times;</span>
+    </div>
+  </div>
+
 </div>
