--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -44,8 +44,8 @@
         <input ng-model='cc.grades' type="text" name="" value="">
         <input ng-model='cc.location' type="text" name="" value="">
         <input ng-model='cc.subject' type="text" name="" value="">
-        <input ng-model='cc.startDate' type="text" name="" value="">
-        <input ng-model='cc.endDate' type="text" name="" value="">
+        <input ng-model='cc.startDate' type="date" name="" value="">
+        <input ng-model='cc.endDate' type="date" name="" value="">
         <input ng-model='cc.startTime' type="text" name="" value="">
         <input ng-model='cc.endTime' type="text" name="" value="">
       </form>
