--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -67,7 +67,7 @@
           <label for="">End Time</label>
         </div>
       </form>
-      <button class='btn' ng-click='cc.addClass()' type="button" name="button"></button>
+      <button class='btn' ng-click='cc.addClass()' type="button" name="button">Save Class</button>
 
     </div>
   </div>
