--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div ng-init='cc.populateClasses()' class="container">
   <h4>Welcome {{cc.name}}! This is the list of current classes!</h4>
   <div class="row">
     <div class="col s6">
