--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -32,7 +32,7 @@
           <td>{{ x.endDate }}</td>
           <td>Time</td>
           <td>{{ x.grades }}</td>
-          <td><button class="delete" ng-click='cc.removeClass(x._id)'>Delete</button></td>
+          <td><button class="btn" ng-click='cc.removeClass(x._id)'>Delete</button></td>
         </tr>
       </table>
     </div>
