--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -27,9 +27,9 @@
           <td>Instructors</td>
           <td>{{ x.subject }}</td>
           <td>{{ x.location }}</td>
-          <td>Days</td>
-          <td>{{ x.startDate }}</td>
-          <td>{{ x.endDate }}</td>
+          <td>{{ x.startDate | date : 'EEE' }}-{{ x.endDate | date : 'EEE'}}</td>
+          <td>{{ x.startDate | date : 'mediumDate'}}</td>
+          <td>{{ x.endDate | date : 'mediumDate'}}</td>
           <td>Time</td>
           <td>{{ x.grades }}</td>
           <td><button class="btn" ng-click='cc.removeClass(x._id)'>Delete</button></td>
