got pin entry and parentQuestions data working

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -6,6 +6,7 @@
   <!-- Stylesheets -->
   <link rel="stylesheet" href="/public/vendors/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="/public/vendors/angular-keypad.min.css">
   <link rel="stylesheet" href="/public/styles/styles.min.css">
   <!-- Vendors -->
   <script src="/public/vendors/jquery-3.2.1.min.js" charset="utf-8"></script>
@@ -14,6 +15,8 @@
   <script src="/public/vendors/angular-cookies.min.js"></script>
   <script src="/public/vendors/materialize.min.js" charset="utf-8"></script>
   <script src="/public/vendors/angular-materialize.min.js" charset="utf-8"></script>
+  <script src="/public/vendors/angular-keypad.min.js"></script>
+
 
   <!-- Ng-App -->
   <script src="/public/scripts/app.js" charset="utf-8"></script>
