--- a/public/view/parentQuestions/1-emergencyContact.html
+++ b/public/view/parentQuestions/1-emergencyContact.html
@@ -1,9 +1,9 @@
 <div class="">
   <h3>Emergency Contact Info</h3>
-  <span>Please review this infomation and make any changes.</span>
+  <span>Please review this information and make any changes.</span>
   <p>Is this information correct?</p>
-  <button ng-click='pc.go("/selfCheckout")' type="button" name="button">Yes</button>
-  <button ng-click='pc.emergencyAlert()' type="button" name="button">No</button>
+  <button class="btn" ng-click='pc.go("/selfCheckout")' type="button" name="button">Yes</button>
+  <button class="btn" ng-click='pc.emergencyAlert()' type="button" name="button">No</button>
 </div>
 
 <!-- emergencyContact page will use x-editable,
