--- a/public/view/parentQuestions/2-selfCheckout.html
+++ b/public/view/parentQuestions/2-selfCheckout.html
@@ -1,6 +1,6 @@
 <div class="">
   <h3>Will your child be checking themselves out?</h3>
-  <button ng-click='pc.selfCheckout(true)' type="button" name="button">Yes</button>
-  <button ng-click='pc.selfCheckout(false)' type="button" name="button">No</button>
+  <button class="btn" ng-click='pc.selfCheckout(true)' type="button" name="button">Yes</button>
+  <button class="btn" ng-click='pc.selfCheckout(false)' type="button" name="button">No</button>
 
 </div>
