--- a/public/view/parentQuestions/4a-pinSystem.html
+++ b/public/view/parentQuestions/4a-pinSystem.html
@@ -1,6 +1,6 @@
 <div class="">
   <h3>Yo I heard you like pins</h3>
-  <button ng-click='pc.usePin(true)' type="button" name="button">yoooooo</button>
-  <button ng-click='pc.usePin(false)' type="button" name="button">noooooo</button>
+  <button class="btn" ng-click='pc.usePin(true)' type="button" name="button">yoooooo</button>
+  <button class="btn" ng-click='pc.usePin(false)' type="button" name="button">noooooo</button>
 
 </div>
