modularized sass files and variables

--- a/public/view/partials/login.html
+++ b/public/view/partials/login.html
@@ -1,14 +1,14 @@
 <!-- Consider this the main view -->
-<h2>Login Page</h2>
-<!-- Shown for users that are NOT logged in -->
-<section ng-hide="auth.loggedIn">
-  <!-- I got this button image from Googles sign-in button brand guidelines page -->
-  <a href= "/auth/google"><img src="/public/assets/btn_google_signin_dark_normal_web.png" /></a>
-  
-</section>
-<!-- Shown for users that are logged in -->
-<section ng-show="auth.loggedIn">
-  <p>
-    You are logged in!
-  </p>
-</section>
+<div class="row">
+  <div class="col s4 offset-s4">
+    <h2 class="center-align">Login Page</h2>
+  </div>
+</div>
+<div class="row" ng-hide="auth.loggedIn">
+  <a href= "/auth/google" class="btn loginBtn col s4 offset-s4 container" type="button" name="button">
+    <img class="loginImg" src="public/assets/images/google_logo1600 (1).png" />
+    <span class="loginDivider">|</span>
+    <span>Sign in with Google</span>
+  </a>
+
+</div>
