--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -1,13 +1,17 @@
-<div ng-init='cc.populateClasses()' class="container">
-  <h4>Welcome {{cc.name}}! This is the list of current classes!</h4>
+<div ng-init='cc.populateClasses()' class="row">
+  <div class="col s12">
+    <h4 class="center-align">Welcome {{cc.name}}! This is the list of current classes!</h4>
+  </div>
+</div>
   <div class="row">
-    <div class="col s6">
+    <div class="center-align">
+      <div ng-if='cc.admin' class="input-field col s6 offset-s1">
+        <input  ng-model=cc.email type="text" name="" value="">
+        <label for="">Instrucotrs email</label>
+      </div>
+      <button ng-if='cc.admin' ng-click="cc.addUser()" class='btn center-align' type="button" name="button">add admin</button>
       <button class="btn" onclick="document.getElementById('addClass').style.display = 'block'">Add Class</button>
     </div>
-    <div class="input-field col s6">
-      <input ng-if='cc.admin' ng-model=cc.email type="text" name="" value="" placeholder="noah">
-    </div>
-    <button ng-if='cc.admin' ng-click="cc.addUser()" class='btn' type="button" name="button">add admin</button>
   </div>
   <div class="row">
     <div class="col s12">
@@ -39,8 +43,8 @@
   </div>
   <!-- The Modal -->
   <div id="addClass" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="document.getElementById('addClass').style.display = 'none'">&times;</span>
+    <div class="modal-content animate">
+      <span class="close animate" onclick="document.getElementById('addClass').style.display = 'none'">&times;</span>
       <form ng-submit='cc.addClass()' class="" action="index.html" method="post">
         <div class="input-field">
           <input ng-model='cc.grades' type="text" name="" value="">
@@ -71,8 +75,6 @@
 
     </div>
   </div>
-
-</div>
 
 
 
