fixed minor styling error

--- a/public/styles/_navigation.scss
+++ b/public/styles/_navigation.scss
@@ -30,12 +30,12 @@
 }
 
 .menu {
-  font-size: 6rem !important;
-  margin-top: 1rem;
+  font-size: 6vh !important;
+  margin-top: 3vh;
 }
 
 nav {
-  height: 10vh;
+  height: 12vh;
   background-color: $sideNavColor;
 }
 
