started setting up students get call

--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -27,7 +27,7 @@
           <th>Grades</th>
           <th></th>
         </tr>
-        <tr ng-repeat='x in cc.classesArray ' ng-click="cc.classView()">
+        <tr ng-repeat='x in cc.classesArray ' ng-click="cc.classView(x._id)">
           <td>Instructors</td>
           <td>{{ x.subject }}</td>
           <td>{{ x.location }}</td>
